<resources>
    <string name="app_name">ROUTIN</string>
    <string name="phno_hint">ENTER PHONE NUMBER</string>
    <string name="heading">PHONE NUMBER VERIFICATION</string>
    <string name="country_code">   India(+91)</string>
    <string name="info">Please enter your phone number, we will send you </string>
    <string name="ok">ok</string>
    <string name="info_2">an OTP for verification</string>
    <string name="info_3">We have sent you an one time message</string>
    <string name="info_4">Please enter it here</string>
    <string name="otp_hint">Enter your OTP </string>
    <string name="male_choice">Male</string>
    <string name="feamle_choice">Female</string>
    <string name="username_hint">Name</string>
    <string name="emailid_hint">Email</string>
    <string name="referralcode_hint">Referral code</string>
    <string name="signup_button">Signup</string>
    <string name="city_heading">CITY</string>
    <array name="spinner1Items">
        <item>PUDUCHERRY</item>
    </array>
    <string name="location_heading">LOCATION</string>
    <array name="spinner2Items">
        <item>LAWSPET</item>
        <item>THAVALAKUPPAM</item>
        <item>MURUNGAPAKKAM</item>
        <item>VILLIANUR</item>
        <item>MOOLAKULAM</item>
        <item>KADHIRKAMAM</item>
        <item>OULGARET</item>
        <item>SARAM</item>
        <item>MUDALIARPET</item>
        <item>MUTHIALPET</item>
        <item>REDDIYARPALAYAM</item>
        <item>BAHUR</item>
        <item>DHARMAPURI</item>
        <item>GORIMEDU</item>
        <item>MARAPALAM</item>
    </array>

    <string name="title_store">Store</string>
    <string name="title_delivery">Delivery</string>
    <string name="title_plans">Plans</string>
    <string name="title_myself">Myself</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
