<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    style="Widget.AppCompat.Button.Borderless"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/backgroumd"
    android:orientation="horizontal"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/activity_heading"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:text="@string/heading"
        android:textAlignment="center"
        android:textColor="@color/violet"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintTop_toTopOf="parent" />


    <TextView
        android:id="@+id/countrycode"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_margin="15dp"
        android:gravity="center"
        android:text="@string/country_code"
        android:textSize="25sp"
        app:layout_constraintTop_toBottomOf="@id/activity_heading" />


    <EditText
        android:id="@+id/phno"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="30dp"
        android:hint="@string/phno_hint"
        android:inputType="number"
        android:maxLength="10"
        app:layout_constraintTop_toBottomOf="@id/countrycode" />

    <Button
        android:id="@+id/ok_button"
        style="@style/Base.TextAppearance.AppCompat"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="15dp"
        android:layout_marginRight="15dp"
        android:text="@string/ok"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/phno"
        android:background="#0000"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/ok_button"
        android:text="@string/info"
        android:textSize="15sp"
        android:layout_margin="20dp"
        android:id="@+id/message_1"
        android:gravity="center_horizontal"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/message_1"
        android:text="@string/info_2"
        android:textSize="15sp"
        android:gravity="center_horizontal"
        android:id="@+id/message_2"/>


</android.support.constraint.ConstraintLayout>