<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorAccent"
    tools:context=".signup">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

    <ImageView
        android:id="@+id/person"
        android:layout_width="175dp"
        android:layout_height="175dp"
        android:layout_marginEnd="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginStart="8dp"
        android:src="@drawable/male"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <RadioGroup xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/person"
        android:id="@+id/gender">

        <RadioButton
            android:id="@+id/male"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="onRadioButtonClicked"
            android:textColor="#dfe6e9"
            android:text="@string/male_choice"
            android:layout_marginRight="10dp"/>

        <RadioButton
            android:id="@+id/female"
            android:layout_width="wrap_content"
            android:textColor="#dfe6e9"
            android:layout_height="wrap_content"
            android:onClick="onRadioButtonClicked"
            android:text="@string/feamle_choice" />
    </RadioGroup>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/username"
        app:layout_constraintTop_toBottomOf="@id/gender"
        android:hint="@string/username_hint"
        android:textColorHint="#dfe6e9"
        android:layout_margin="15dp"
        android:inputType="text"
       />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/email"
        app:layout_constraintTop_toBottomOf="@id/username"
        android:hint="@string/emailid_hint"
        android:textColorHint="#dfe6e9"
        android:layout_margin="15dp"
        android:inputType="textEmailAddress"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/referralcode"
        app:layout_constraintTop_toBottomOf="@id/email"
        android:textColorHint="#dfe6e9"
        android:hint="@string/referralcode_hint"
        android:layout_margin="15dp"
        android:inputType="number"/>

    <Button
        android:id="@+id/signup"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:text="@string/signup_button"
        app:layout_constraintTop_toBottomOf="@id/referralcode" />
        </android.support.constraint.ConstraintLayout>

    </ScrollView>


</android.support.constraint.ConstraintLayout>